# BSG_IDE

./: BSG_IDE.py  BSG_IDE_Utils.py  BeamerSlideGenerator.py  Build_AND_Upload_PyPi.py  DSSC_converted.tex  DSSC_converted.txt  EnhancedCommandDialog.py  Grammarly.py  InteractiveTerminal.py  LatexHelp.py  MANIFEST.in  README.md  Upload_Built_IDE2PyPi.sh  __init__.py  install.sh  pyproject.toml  requirements.txt  sdss_presentation_converted.txt  setup.cfg  setup.py
