[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bsg-ide"
dynamic = ["version"]
description = "Beamer Slide Generator IDE - Integrated development environment for creating LaTeX Beamer presentations"
authors = [
    {name = "Ninan Sajeeth Philip", email = "nsp@airis4d.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["latex", "beamer", "presentation", "slides", "ide", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Office/Business",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    "customtkinter>=5.2.2",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "yt-dlp>=2023.11.16",
    "opencv-python>=4.8.0",
    "screeninfo>=0.8.1",
    "numpy>=1.24.0",
    "PyMuPDF>=1.23.7",
    "pyautogui>=0.9.54",
    "pyspellchecker>=0.7.2",
    "latexcodec>=2.0.1",
    "latex>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/sajeethphilip/Beamer-Slide-Generator"
Bug-Reports = "https://github.com/sajeethphilip/Beamer-Slide-Generator/issues"
Documentation = "https://github.com/sajeethphilip/Beamer-Slide-Generator/wiki"

[project.scripts]
bsg-ide = "BSG_IDE:launch_ide"

[project.gui-scripts]
bsg-ide-gui = "BSG_IDE:launch_ide"

[tool.setuptools_scm]
write_to = "_version.py"
