[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "bsg-ide"
version = "5.0.1"
description = "Beamer Slide Generator IDE - Create professional LaTeX presentations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ninan Sajeeth Philip", email = "nsp@airis4d.com"}
]

[project.urls]
"Homepage" = "https://github.com/sajeethphilip/Beamer-Slide-Generator"
"Bug Reports" = "https://github.com/sajeethphilip/Beamer-Slide-Generator/issues"
"Source" = "https://github.com/sajeethphilip/Beamer-Slide-Generator"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
bsg_ide = [
    "resources/*.png",
    "templates/*.txt",
    "*.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=bsg_ide --cov-report=html --cov-report=term"
