[metadata]
license_file = LICENSE
description_file = README.md

[options]
zip_safe = False
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude = tests, docs, scripts

[options.entry_points]
console_scripts =
    bsg-ide = bsg_ide.BSG_IDE:launch_ide
    bsg = bsg_ide.BSG_IDE:launch_ide
gui_scripts =
    bsg-ide-gui = bsg_ide.BSG_IDE:launch_ide

[flake8]
max-line-length = 120
exclude = .git, __pycache__, build, dist, *.egg-info, tests
ignore = E501, W503, E203

[mypy]
ignore_missing_imports = True
follow_imports = silent

[build_system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
